// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar NavBar snapshot with user 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="h6"
      >
        appName
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to="/test"
      >
        <Button
          color="inherit"
          data-testid="testButton"
        >
          message
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="otherButton"
      >
        other
      </Button>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        <Avatar
          className="avatar"
        >
          <Typography
            color="inherit"
          >
            n
          </Typography>
        </Avatar>
        <Typography
          color="inherit"
        >
          logout
        </Typography>
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="testLink"
            to="/test"
          >
            <Typography
              color="textPrimary"
            >
              message
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem>
          <Typography
            color="textPrimary"
          >
            other
          </Typography>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          <Avatar
            className="avatar"
          >
            <Typography
              color="inherit"
            >
              n
            </Typography>
          </Avatar>
          <Typography
            color="textPrimary"
          >
            logout
          </Typography>
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;

exports[`Navbar NavBar snapshot without user 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="h6"
      >
        appName
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <Link
        className="link"
        to="/test"
      >
        <Button
          color="inherit"
          data-testid="testButton"
        >
          message
        </Button>
      </Link>
      <Button
        color="inherit"
        data-testid="otherButton"
      >
        other
      </Button>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        login
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <Link
            className="menuLink"
            data-testid="testLink"
            to="/test"
          >
            <Typography
              color="textPrimary"
            >
              message
            </Typography>
          </Link>
        </MenuItem>
        <MenuItem>
          <Typography
            color="textPrimary"
          >
            other
          </Typography>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          login
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;
